# Aksu

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE-DATA  README.md  dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml  publish-pypi.yml
audit/: execution_log.md  pre_rename_pytest_baseline.txt  preflight_finalpush.md  v1.0.0_release_report.md  v1.1.0_release_report.md
audit/benchmark_results/: inference_throughput.json  metrics.json  v1.1_neural_backend.json  zeyrek_throughput.json
audit/branches/: dvc-fix.patch
audit/halt_reports/: 2026-05-16-berturk-measurement-drift.md  2026-05-16-dualhead-em.md  2026-05-16-ttc3600-acquisition.md
audit/results/: 00_5_resource_provenance.md  00_commit.txt  01_freeze.txt  02_freeze_diff.txt  02_venv_freeze.txt  05_dvc_repro.json  06_api_tests.json  07_em.json  08_dual_head.json  09_training_time.json  10_inference_benchmarks.json  11_ttc3600.json  12_pytest.xml  REPORT.md
audit/scripts/: eval_disambiguator.py  eval_disambiguator_verbatim.py
audit/slurm_jobids/: finalpush_stage1.txt
configs/data/: v2_tier_thresholds.yaml
data/schemas/: v2_entry.schema.json
docs/: README.md.j2
models/: .aksuignore
models/dualhead_v1_cpu/: args.json  eval_results.json  final_model_metadata.json
models/punctuation/: best_model_metadata.json
models/v6/: eval_results.json
models/v6_retimed/: best_model_metadata.json
scripts/: benchmark_inference.py  benchmark_neural_backend.py  benchmark_zeyrek.py  build_readme.py  download_berturk.py  eval_all_models.py  eval_disambiguator.py  eval_dualhead.py  eval_full_test.py  eval_one_model.py  eval_v4_models.py  ingest_eval_results.py  ingest_metrics.py  measure_zeyrek_coverage.py
scripts/data/: dataset_stats.py  dedup_tokens.py  download_oscar_pilot.py  extract_v1_test_tokens.py  publish_huggingface.py  validate_dataset.py  validate_v2.py  write_checkpoint_metadata.py
scripts/truba/: submit_autolabel_pilot.sh  submit_dualhead_eval.sh  submit_dualhead_train.sh  submit_inference_benchmark.sh  submit_preprocess_aksu.sh  submit_tier_boundary.sh  submit_train_disambiguator.sh  submit_v6_eval_aksu.sh  submit_zeyrek_benchmark.sh
tests/: conftest.py  test_ariturk.py  test_ariturk_coverage.py  test_checkpoint_metadata.py  test_kokturk.py  test_neural_backend_gpu.py  test_normalize_artifacts.py  test_normalize_pdf.py  test_readme_examples.py  test_readme_render.py  test_version_license_consistency.py
tools/: rename_imports.py
(+176 files in other folders)
