[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aksu"
dynamic = ["version"]
description = "Neural Turkish Morphological Atomizer"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Melik Kul", email = "metinkul895@gmail.com"}]
keywords = ["turkish", "morphology", "nlp", "atomizer", "tokenization"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = [
  "zeyrek>=0.1.3",
  "torch>=2.0.0",
  "numpy>=1.24.0",
]

[project.optional-dependencies]
dev       = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "ruff>=0.4.0", "mypy>=1.9.0", "libcst>=1.1.0"]
train     = ["mlflow>=2.10.0", "optuna>=3.5.0", "transformers>=4.40.0"]
benchmark = ["scipy>=1.12.0"]
data      = ["datasets>=2.18.0", "huggingface-hub>=0.23.0", "diskcache>=5.6.3"]

[project.scripts]
aksu = "aksu.cli.main:main"

[project.urls]
Homepage      = "https://github.com/melikkul/Aksu"
Issues        = "https://github.com/melikkul/Aksu/issues"
Documentation = "https://github.com/melikkul/Aksu#readme"

[tool.setuptools.packages.find]
where = ["src"]
include = ["aksu*"]

[tool.setuptools.dynamic]
version = {attr = "aksu._version.__version__"}

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]
ignore = [
    "E501",
    "B008",
    "SIM108",
]

[tool.ruff.lint.isort]
known-first-party = ["aksu"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --tb=short"
markers = [
  "gpu: requires CUDA GPU",
  "slow: takes >30s",
  "integration: requires external resources",
]

[tool.coverage.run]
source = ["src/aksu"]
omit = ["**/__init__.py", "**/test_*.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "def __repr__",
]
